--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,5 +1,7 @@
-.page-header
-    h1
-      = "Edit user #{@user.email}"
-= render 'form'
+.row
+  .col-md-7.col-md-offset-1
+    .page-header
+      h1
+        = "Edit user #{@user.email}"
+    = render 'form'
 
