--- a/app/views/layouts/geoauth_login.html.slim
+++ b/app/views/layouts/geoauth_login.html.slim
@@ -31,4 +31,4 @@ html lang="en"
       .container
         .col-md-12
           .text-center
-            ' Geoauth OSUR Instance
+            = Settings.site_title
