--- a/app/assets/stylesheets/base/sidebar-page.scss
+++ b/app/assets/stylesheets/base/sidebar-page.scss
@@ -161,14 +161,34 @@ $sidebar-border-color: #eaeaea;
     }
 
     #page-content-wrapper {
-        padding: 46px 20px 20px 20px;
+        padding: 145px 20px 20px 20px;
         // xymox try
         // padding-top:0;
         position: relative;
+        .page-header {
+          margin-top: 0;
+          h1 {
+            margin-top: 0;
+          }
+        }
     }
 
     #wrapper.toggled #page-content-wrapper {
         position: relative;
         margin-right: 0;
     }
+}
+
+body.admin {
+  .nav > li {
+    padding: 12px 20px 5px 20px;
+    & > a {
+      font-size: 2.0rem;
+      text-transform: initial;
+      padding: 10px 15px;
+    }
+  }
+  footer {
+    display: none;
+  }
 }
