--- a/app/views/admin/groups/edit.html.slim
+++ b/app/views/admin/groups/edit.html.slim
@@ -1,5 +1,6 @@
-.span10.offset1
-  .page-header
-    h1 Editing group
+.row
+  .col-md-7.col-md-offset-1
+    .page-header
+      h1 Edit group
 
-  = render 'form'
+    = render 'form'
