--- a/app/views/admin/groups/new.html.slim
+++ b/app/views/admin/groups/new.html.slim
@@ -1,6 +1,7 @@
-.span10.offset1
-  .page-header
-    h1 New group
+.row
+  .col-md-7.col-md-offset-1
+    .page-header
+      h1 New group
 
-  = render 'form'
+    = render 'form'
 
