--- a/app/views/admin/roles/edit.html.slim
+++ b/app/views/admin/roles/edit.html.slim
@@ -1,6 +1,6 @@
-.span10.offset1
-  .page-header
-    h1 Editing role
+.row
+  .col-md-7.col-md-offset-1
+    .page-header
+      h1 Edit role
 
-  = render 'form'
-
+    = render 'form'
