--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,18 +1,21 @@
-= devise_error_messages!
-.devise-form.signup
-  .form-signup
-    = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal' },  defaults: { input_html: { class: 'm-wrap input-block-level' } }) do |f|
-      = f.error_notification
-      .page-header
-        h1 About you
+.col-sm-7.col-sm-offset-2.col-xs-12
+  = devise_error_messages!
+  .devise-form.signup
+    .form-signup
+      = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-vertical' }, defaults: { input_html: { class: 'form-vertical' } }, wrapper: :vertical_form, wrapper_mappings: { check_boxes: :horizontal_radio_and_checkboxes, radio_buttons: :horizontal_radio_and_checkboxes, file: :horizontal_file_input, boolean: :horizontal_boolean }) do |f|
+        = f.error_notification
+        .page-header
+          h1 About you
 
-      p.small Inscription obligatoire pour b&eacute;n&eacute;ficier de tous les avantages de la plateforme.
-      = f.input :first_name, :autofocus => true
-      = f.input :last_name
-      = f.input :email, :required => true
-      = f.input :password, :required => true
-      = f.input :password_confirmation, :required => true
-      .form-actions.nopadding
-        = f.button :submit, 'Sign up', class: "pull-right"
-.login-footer
-  = render "devise/shared/links"
+        p Inscription obligatoire pour b&eacute;n&eacute;ficier de tous les avantages de la plateforme.
+
+        = f.input :email, required: true
+        = f.input :password, required: true
+        = f.input :password_confirmation, required: true
+        = f.input :first_name, autofocus: true
+        = f.input :last_name
+
+        = f.button :wrapped, cancel: '/login', class: 'btn-lg'
+
+  .login-footer
+    = render "devise/shared/links"
