--- a/app/views/layouts/_devise_nav_bar.html.slim
+++ b/app/views/layouts/_devise_nav_bar.html.slim
@@ -6,14 +6,17 @@ nav.navbar role="navigation"
           => fa_icon(:globe)
           | Geoauth
     .navbar-collapse.collapse.navbar-responsive-collapse
-      ul.nav.navbar-nav.navbar-right
+      ul.nav.navbar-nav.navbar-right.navbar-dotted
         li
-          = link_to 'Geoserver', '/geoserver/'
+          = link_to 'Geoserver', Settings.geoserver_url
         li
-          = link_to 'Geonetwork', '/geonetwork/'
+          = link_to 'Geonetwork', Settings.geonetwork_url
         li
-          = link_to 'Geocms', '/geocms/'
+          = link_to 'Geocms', Settings.geocms_url
         - if !user_signed_in?
+          li.divider role="separator"
+          li.login
+            = link_to 'Login', '/login'
           li.btn.signup
             = link_to 'Sign up', new_registration_path(resource_name), class: 'btn btn-default btn-transparent'
         - else
