--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -19,7 +19,7 @@ html lang="en"
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
     = javascript_include_tag "application"
 
-  body
+  body.admin
     #wrapper
       #sidebar-wrapper
         .nav-sidebar.cd.cd-vertical
@@ -41,12 +41,22 @@ html lang="en"
            
               .navbar-collapse.collapse.navbar-responsive-collapse
                 ul.nav.navbar-nav.navbar-right
-                  li
-                    - if user_signed_in?
-                      = link_to destroy_user_session_path, method: :delete do
-                        = gravatar_image_tag(current_user.email, alt: current_user.email, gravatar: { size: 36 })
-                        = current_user.email
-                    - else
+                  - if user_signed_in?
+                    li role="presentation" class="dropdown active"
+                      a.dropdown-toggle.btn.btn-default data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
+                        => fa_icon(:cog)
+                        span.caret
+                      ul.dropdown-menu
+                        li
+                          = link_to 'Logout', destroy_user_session_path, method: :get
+                        li role="separator" class="divider"
+                        li
+                          = link_to edit_admin_user_path(current_user) do
+                            span.email
+                              = current_user.email
+                            = gravatar_image_tag(current_user.email, alt: current_user.email, gravatar: { size: 36 }, class: 'img-circle')
+                  - else
+                    li
                       = link_to 'Login', new_user_session_path
   
         .container-fluid
