--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,3 +1,5 @@
-.page-header
-    h1 New user
-= render 'form'
+.row
+  .col-md-7.col-md-offset-1
+    .page-header
+      h1 New user
+    = render 'form'
