--- a/app/views/admin/roles/edit.html.slim
+++ b/app/views/admin/roles/edit.html.slim
@@ -4,3 +4,12 @@
       h1 Edit role
 
     = render 'form'
+
+.row
+  .col-md-7.col-md-offset-1
+    .page-header
+      h1 
+        | Members 
+        small
+          = "(#{@role.name})"
+    = render 'admin/users/list', users: @users
