--- a/app/views/admin/users/_list.html.slim
+++ b/app/views/admin/users/_list.html.slim
@@ -7,7 +7,7 @@ table.users.table
       th
     
     tbody
-      - @users.each do |user|
+      - users.each do |user|
         tr
           td
             = link_to user.email, edit_admin_user_path(user)
@@ -23,4 +23,4 @@ table.users.table
             = link_to [ :admin, user ], method: :delete, data: { confirm: 'Are you sure?' }, title: "Delete user #{user.name}" do
               = fa_icon(:"times-circle-o")
 
-= paginate @users
+= paginate users
