--- a/app/assets/stylesheets/base/form-signin.scss
+++ b/app/assets/stylesheets/base/form-signin.scss
@@ -62,6 +62,7 @@
   // -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   // -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   // box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  color: #000;
 }
 .login-title {
   color: #555;
