--- a/app/assets/stylesheets/framework_and_overrides.scss
+++ b/app/assets/stylesheets/framework_and_overrides.scss
@@ -48,7 +48,7 @@ html {
   min-height: 100%;
 }
 
-body { 
+body {
   color: #55545b;
   height: 100%;
   width: 100%;
@@ -206,5 +206,35 @@ h3.logo {
 //ul.nav > li {
 //  padding: 20px 15px;
 //}
+
+//
+// Admin search
+//
+
+.input-search {
+  position: relative;
+  & .form-control {
+    padding-left: 40px;
+  }
+}
+
+.input-search .input-search-icon {
+    left: 8px;
+    font-size: 16px;
+    color: #a3afb7;
+    text-align: center;
+    pointer-events: none;
+}
+
+.input-search .input-search-close, .input-search .input-search-icon {
+    position: absolute;
+    top: 33%;
+    z-index: 1;
+    width: 36px;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
 
 @import "modules/bootstrap-social";
