--- a/app/views/admin/roles/_list.html.slim
+++ b/app/views/admin/roles/_list.html.slim
@@ -10,7 +10,7 @@ table.roles.table
       - @roles.each do |role|
         tr
           td
-            = link_to role.name, edit_admin_role_path(role)
+            = link_to role.name, admin_role_path(role)
             br/
             p
               em
@@ -23,4 +23,3 @@ table.roles.table
           td.actions
             = link_to [ :admin, role ], method: :delete, data: { confirm: 'Are you sure?' }, title: "Delete role #{role.name}" do
               = fa_icon(:"times-circle-o")
-
