--- a/app/views/admin/roles/show.html.slim
+++ b/app/views/admin/roles/show.html.slim
@@ -1,20 +1,39 @@
 p#notice= notice
-
-table.table
-  tbody
-    tr
-      td
-        b Name:
-      td
-        = @role.name
-    tr
-      td
-        b Description:
-      td
-        = @role.description
+.row
+  .col-md-7
+    .page-header
+      h1= "Role : #{@role.name}"
+    table.table
+      tbody
+        tr
+          th
+            b Name
+          td
+            = @role.name
+        tr
+          th
+            b Description
+          td
+            = @role.description
+        tr
+          th
+            b Members
+          td
+            => fa_icon(:user)
+            = @members.total_count
+    .form-actions
+      = btn_link_to "Edit", edit_admin_role_path(@role)
+      |  or 
+      = link_to 'back', admin_roles_path
 
 - if @members.any?
-  = render partial: 'admin/shared/users_list', locals: { users: @members }
-= link_to 'edit', edit_admin_role_path(@role), class: 'btn btn-primary'
-|  or 
-= link_to 'back', admin_roles_path
+  .divider
+  .row
+    .col-md-12
+      .page-header
+        h1 
+          | Members 
+          small
+            = "(#{@role.name})"
+      = render 'admin/users/list', users: @members
+    
