--- a/app/views/admin/users/_list.html.slim
+++ b/app/views/admin/users/_list.html.slim
@@ -7,7 +7,10 @@ table.users.table
       th= sort_link @q, :name, %i(last_name first_name)
       th= sort_link @q, :groups_name, 'Groups'
       th= sort_link @q, :created_at
-      th= link_to 'export users', admin_users_path(format: 'csv', params: params)
+      th
+        .download-link
+          = link_to 'export users', url_for(format: 'csv', params: params.dup.except(:action, :controller))
+          = icon('file-excel-o')
     
     tbody
       - users.each do |user|
