Add support for public groups

--- a/app/views/admin/groups/_form.html.slim
+++ b/app/views/admin/groups/_form.html.slim
@@ -3,6 +3,7 @@
   .form-inputs
     = f.input :name
     = f.input :description, as: :text, input_html: { rows: 5 }
+    = f.input :public, as: :boolean
 
   - unless @group.new_record?
     .page-header
