--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -14,7 +14,10 @@
         = f.input :password_confirmation, required: true
         = f.input :first_name, autofocus: true
         = f.input :last_name
-
+        
+        p Quel sera votre usage de l'IDS ?
+        = f.association :requested_group, collection:  Group.public_groups, prompt: "Votre usage", label: false
+        
         = f.button :wrapped, cancel: '/login', class: 'btn-lg'
 
   .login-footer
