Manage redirect after sign_in for omniauth-ldap

--- a/app/assets/stylesheets/base/form-signin.scss
+++ b/app/assets/stylesheets/base/form-signin.scss
@@ -13,7 +13,7 @@
       text-decoration: underline;
       &.btn-social {
         color: #fff;
-        &.btn-shibboleth {
+        &.btn-shibboleth, &.btn-ldap {
           color: #555;
         }
       }
@@ -179,4 +179,3 @@ body.login {
   // logo is 30px height
   padding: 10px 15px;
 }
-
