--- a/app/views/admin/groups/_form.html.slim
+++ b/app/views/admin/groups/_form.html.slim
@@ -4,6 +4,7 @@
     = f.input :name
     = f.input :description, as: :text, input_html: { rows: 5 }
     = f.input :public, as: :boolean
+    = f.input :entity, as: :boolean
 
   - unless @group.new_record?
     .page-header
