--- a/app/views/admin_mailer/new_registration.text.erb
+++ b/app/views/admin_mailer/new_registration.text.erb
@@ -3,3 +3,7 @@ Bonjour,
 L'utilisateur <%= @user.email %> vient d'être créé.
 
 Vous pouvez l'approuver et modifier ses droits sur l'url suivant <%= @url %>
+
+Message:
+
+<%= h @user.comment %>
